# my-installer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  box-test.nsi  build.ps1  fin.bat  get_box_status.cpp  get_result.cpp  my-installer.csproj  my-installer.sln  power_keep.cpp  python-package.bat  qt_simple_window.py  status.cs  vcredist-and-msu.nsi  wait-finish.py
Properties/: launchSettings.json
